--- a/Lab 5/Lab 5.8/style.css
+++ b/Lab 5/Lab 5.8/style.css
@@ -17,7 +17,7 @@ h2 {
     font-size: 24px;
 }
 
-.description {
+.free-shipping {
     color: dimgray;
     font-weight: bold;
     text-transform: uppercase;
