--- a/Lab 8/Lab 8.2/style.css
+++ b/Lab 8/Lab 8.2/style.css
@@ -1,3 +1,10 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+p {
+    margin: 0;
+}
 body {
     /*border-style: solid;*/
     /*border-color: black;*/
@@ -18,12 +25,23 @@ h2 {
 }
 .price {
     font-size: 24px;
+    float: left;
+    width: 50%;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .free-shipping {
     color: dimgray;
     font-weight: bold;
     text-transform: uppercase;
+    margin-bottom: 25px;
+    margin-top: 17px;
+    float: right;
+    width: 50%;
+}
+.description {
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 
@@ -38,15 +56,15 @@ h3 {
     text-transform: uppercase;
     font-size: 16px;
 }
-.details-title {
-    margin-bottom: 15px;
-    margin-top: 30px;
-}
 .details-list {
     list-style: square;
-    margin-left: 20px;
+    padding-left: 20px;
 }
 .details-list li {
+    margin-bottom: 10px;
+}
+.details-title {
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 .add-to-cart {
@@ -81,13 +99,14 @@ article {
 .color {
     width: 22px;
     height: 22px;
-    margin: 10px;
+    margin: 8px;
     display: inline-block;
 }
 .colors {
 
 }
 
+/*background color*/
 .black-bgc {
     background-color: black;
 }
@@ -105,4 +124,25 @@ article {
 }
 .brown-bgc {
     background-color: saddlebrown;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+.container {
+    float: left;
+}
+/*product container*/
+.product-info {
+}
+.product-img {
+}
+.product-details {
+}
+.product-info, .product-details, .product-img {
+    /*border: #00FF00 solid 1px;*/
+    width: 33%;
+    float: left;
 }
