--- a/Lab 6/Lab 6.8/style.css
+++ b/Lab 6/Lab 6.8/style.css
@@ -19,7 +19,7 @@ h2 {
     font-size: 24px;
 }
 
-.description {
+.free-shipping {
     color: dimgray;
     font-weight: bold;
     text-transform: uppercase;
