--- a/Assignment 02/css/style.css
+++ b/Assignment 02/css/style.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0px;
+    margin: 0;
 }
 
 .bg-grey {
@@ -15,7 +15,43 @@ section > .container{
 }
 
 #nav-bar {
-    text-align: center;
+    /*text-align: center;*/
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    grid-template-rows: auto;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    /*align-content: center;*/
+}
+.nav-bar-item {
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px solid darkgray;
+}
+
+.banner-container {
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+.banner-img {
+    width: 100%;
+}
+.name {
+    font-size: 4em;
+}
+.job-desc {
+    font-size: 1.7em;
+}
+.abs-centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 body, h1, h2, h3 {
@@ -35,7 +71,6 @@ ul {
     text-decoration: none;
     margin: 0;
     padding: 0;
-    width: 100%;
     font-family: arial, sans-serif, tahoma;
     font-size: 10pt;
 }
