--- a/Assignment 02/css/style.css
+++ b/Assignment 02/css/style.css
@@ -1,17 +1,77 @@
 * {
     margin: 0;
+    padding: 0;
+}
+img {
+    width: 100%;
+}
+.max-width-80{
+    max-width: 80%;
+}
+.pd-10 {
+    padding: 10px;
+}
+
+.grid-col-2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 20px;
+}
+.grid-col-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /*grid-template-columns: repeat(3, minmax(200px, 400px));*/
+    /*padding: 0 200px;*/
+    max-width: 80%;
+    margin: auto;
+    justify-content: center;
+    gap: 30px;
+}
+.certi-container {
+    padding: 40px 10%;
+    /*background-color: #f5f5f5;*/
+    grid-gap: 1px;
+    row-gap: 30px;
+    column-gap: 15px;
+}
+.certi-item {
+    display: grid;
+    grid-template-columns: 40% 1fr;
+    row-gap: 10px;
+    column-gap: 30px;
+    /*background-color: #f5f5f5;*/
+    border-bottom: 1px solid #d6c08d;
+    border-right: 1px solid #d6c08d;
+    /*outline: #f0f0f0 15px solid;*/
+    outline: white 10px solid;
+    border-collapse: collapse;
+    padding-right: 15px;
+    margin-bottom: 15px;
+    padding-left: 15px;
+    box-sizing: content-box;
+}
+.certi-item:nth-last-child(-n+2):nth-child(odd),
+.certi-item:nth-last-child(-n+1):nth-child(even) {
+    border-bottom: none;
+}
+.certi-item:nth-last-child(-n+1):nth-child(odd),
+.certi-item:nth-last-child(-n+2):nth-child(even){
+    border-right: none;
+}
+.certi-content {
+    color: #767676;
+    margin-bottom: 10px;
+}
+.certi-name {
+    text-transform: uppercase;
+    color: black;
 }
 
 .bg-grey {
-    background: #f7f7f7;
+    background: #f0f0f0;
 }
-
-section > .container{
-    width: 1170px;
-    margin: auto;
-    display: block;
-
-    padding: 30px 50px;
+.bg-light-grey {
+    background: #f5f5f5;
 }
 
 #nav-bar {
@@ -33,16 +93,7 @@ section > .container{
     align-items: center;
     align-content: center;
 }
-/*.nav-bar-main-item {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    align-items: center;;*/
-/*    padding-left: 60px;*/
-/*    padding-right: 60px;*/
-/*    border: 1px solid darkgray;*/
-/*    border-collapse: collapse;*/
-/*}*/
-.avatar_1 {
+.avatar {
     margin-left: 60px;
     margin-right: 60px;
     width: 150px;
@@ -53,7 +104,7 @@ section > .container{
     z-index: 1;
     position: relative;
 }
-.avatar_1>img {
+.avatar>img {
     width: 100%;
     height: auto;
 }
@@ -83,9 +134,6 @@ section > .container{
     align-items: center;
 }
 
-body, h1, h2, h3 {
-    margin: 0px;
-}
 ul {
     padding-left: 15px;
 }
@@ -111,21 +159,31 @@ ul {
     font-size: 100%;
     vertical-align: baseline;
     text-decoration: none;
-    width: 900px;
+    /*width: 900px;*/
     min-height: 900px;
     margin: 0 auto;
     box-shadow: 0 0 1px rgba(0,0,0,.5);
     background-color: #fff;
     position: relative;
-    padding: 40px
+    /*padding: 0 40px*/
 }
 p {
     margin: 0;
     line-height: 1.6;
 }
 
-#info {
+#target, #info {
+    padding: 60px 20px 60px 20px;
 }
+.info-content {
+    padding-left: 25px;
+    display: grid;
+    grid-template-columns: 100px 1fr;
+}
+.info-details {
+
+}
+
 #name {
     font-weight: bold;
     font-size: 30px;
@@ -135,112 +193,78 @@ p {
     width: auto;
     position: relative;
     margin-bottom: 10px;
-    margin-left: 10%;
+    padding-bottom: 50px;
+    border: lightgray 1px solid;
+}
+.section-content-1 {
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    row-gap: 25px;
 }
 .section-content {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 100%;
+    padding-left: 25px;
 }
 .section-title {
-    text-transform: uppercase;
-    border-bottom: black solid 1px;
-}
-.avatar {
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.avatar>img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    font-size: 25px;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    padding: 35px 0 35px 25px;
+    /*font-weight: bold;*/
+    /*text-transform: uppercase;*/
 }
 
-.section>div {
-    display: inline-block;
-}
-
-.info-details>div {
-    display: inline-block;
-}
-.info-details {
-    line-height: 1;
-}
 .label {
-    width: 140px;
+    width: 100px;
     font-weight: bold;
-    font-size: 17px;
-}
-.details {
-    font-size: 17px;
-}
-.content-details>p:first-child {
-    font-weight: bold;
-}
-.section-content>ul {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    border-bottom: lightgray solid 1px;
-    width: 100%;
 }
 
-.section-content ul li {
-    margin-right: 10px;
-}
-
-.section-content>ul>li:first-child {
-    /*flex: 0 0 150px;*/
-    /*width: 150px;*/
-}
-ul .sub-details {
-    list-style-type: "- ";
-    display: flex;
-    flex-direction: column;
-    padding-left: 10px;
-}
-
-.sub-details li {
-}
-
-li.skill {
-    font-weight: bold;
-}
-li.certi {
-    text-transform: uppercase;
-}
-#hobby ul {
-    border: none;
-    list-style-type: disc;
-    padding-left: 15px;
-}
-.project-info .title {
-    font-weight: bold;
-    text-transform: uppercase;
-}
-.project-info .time {
-}
-.project-info li div {
-    display: inline-block;
-}
-.project-lbl {
-    font-weight: bold;
-}
 a {
     text-decoration: none;
     color: blue;
 }
 
-.education-item, .experience-item, .activity-item, .skill-item, .certificate-item {
-    display: flex;
-}
 .time-range, .skill {
-    width: 200px;
+    font-style: italic;
 }
-.content-details, .skill-lvl, .certi {
-    flex: 1;
+.now {
+    background-color: #00FFFF;
+    color: white;
+    border-radius: 5px;
+    padding: 0 5px;
+}
+
+.item-title {
+    font-weight: bold;
+}
+.hobby {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    padding: 10px;
+}
+
+.hobby-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: deepskyblue 1px solid;
+}
+
+.language-item {
+    margin-bottom: 10px;
+}
+
+.blue-line {
+    border-bottom: deepskyblue 3px solid;
+}
+
+.grey-line {
+    border-bottom: darkgray 3px solid;
+}
+
+.blue-line, .grey-line {
+    margin-right: 5px;
+    display: inline-block;
+    width: 40px;
 }
