--- a/Assignment 02/css/style.css
+++ b/Assignment 02/css/style.css
@@ -44,17 +44,18 @@ img {
 .certi-grid-layout {
     display: grid;
     grid-template-columns: 1fr 1px 1fr;
-    grid-template-rows: 1fr 1px 1fr
+    grid-template-rows: 1fr 1px 1fr;
+    grid-gap: 20px;
 }
 .certi-border {
     background-color: #d6c08d;
 }
+.horizontal-border{
+    grid-column: 1 / -1;
+}
 .certi-container {
     padding: 40px 10%;
-    /*background-color: #f5f5f5;*/
-    grid-gap: 1px;
-    row-gap: 30px;
-    column-gap: 15px;
+    background-color: #f5f5f5;
 }
 
 .certi-item {
@@ -62,28 +63,11 @@ img {
     grid-template-columns: 40% 1fr;
     row-gap: 10px;
     column-gap: 30px;
-    border-bottom: 1px solid #d6c08d;
-    border-right: 1px solid #d6c08d;
-    border-collapse: collapse;
-    padding-right: 15px;
-    margin-bottom: 15px;
-    padding-left: 15px;
     box-sizing: content-box;
-}
-
-.certi-item:nth-last-child(-n+2):nth-child(odd),
-.certi-item:nth-last-child(-n+1):nth-child(even) {
-    border-bottom: none;
-}
-
-.certi-item:nth-last-child(-n+1):nth-child(odd),
-.certi-item:nth-last-child(-n+2):nth-child(even) {
-    border-right: none;
 }
 
 .certi-content {
     color: #767676;
-    margin-bottom: 10px;
 }
 
 .certi-name {
@@ -245,6 +229,7 @@ p {
 }
 
 .section-title {
+    color: black;
     font-size: 25px;
     display: grid;
     grid-template-columns: 3fr 1fr;
