--- a/Assignment 02/css/style.css
+++ b/Assignment 02/css/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     border-collapse: collapse;
     box-sizing: border-box;
+    line-height: 1.6;
+}
+body {
+    font-size: 16px;
 }
 .cl-blue-icon {
     color: #189cdb;
@@ -15,8 +19,8 @@ img {
     width: 100%;
 }
 
-.max-width-80 {
-    max-width: 80%;
+.max-width-66 {
+    max-width: 66%;
 }
 
 .pd-10 {
@@ -61,7 +65,7 @@ img {
     grid-column: 1 / -1;
 }
 .certi-container {
-    padding: 40px 10%;
+    padding: 40px 17%;
     background-color: #f5f5f5;
 }
 
@@ -176,14 +180,14 @@ ul {
     margin: 0;
     padding: 0;
     font-family: arial, sans-serif, tahoma;
-    font-size: 10pt;
+    /*font-size: 10pt;*/
 }
 
 .cv-page {
     outline: 0;
     font-weight: inherit;
     font-style: inherit;
-    font-size: 100%;
+    /*font-size: 100%;*/
     vertical-align: baseline;
     text-decoration: none;
     /*width: 900px;*/
@@ -205,7 +209,7 @@ p {
 }
 
 .info-content {
-    padding-left: 25px;
+    padding-left: 55px;
     display: grid;
     grid-template-columns: 100px 1fr;
 }
@@ -216,7 +220,7 @@ p {
 
 #name {
     font-weight: bold;
-    font-size: 30px;
+    font-size: 3em;
     color: #0e2452;
 }
 
@@ -230,21 +234,22 @@ p {
 
 .section-content-1 {
     padding: 10px;
+    padding-left: 30px;
     display: grid;
     grid-template-columns: 40px 1fr;
     row-gap: 25px;
 }
 
 .section-content {
-    padding-left: 25px;
+    padding-left: 55px;
 }
 
 .section-title {
     color: black;
-    font-size: 25px;
+    font-size: 2em;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    padding: 35px 0 35px 25px;
+    padding: 35px 0 35px 55px;
 }
 
 .label {
@@ -286,7 +291,7 @@ a {
     border: deepskyblue 1px solid;
 }
 .hobby-icon >i {
-    font-size: 30px;
+    font-size: 2.3em;
     margin-left: 9px;
     margin-top: 9px;
 }
@@ -312,7 +317,7 @@ a {
 .pro-container {
     color: #767676;
     /*margin-bottom: 30px;*/
-    margin: 30px 10%;
+    margin: 30px 17%;
 }
 
 .pro-item {
@@ -381,7 +386,7 @@ a {
 }
 .contact-item i {
     vertical-align: middle;
-    font-size: 24px;
+    font-size: 2em;
 }
 
 .contact a {
