--- a/Lab 11/css/utilities.css
+++ b/Lab 11/css/utilities.css
@@ -138,6 +138,10 @@
     height: 100%;
 }
 
+.flex-row {
+    flex-direction: column;
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
