--- a/Lab 11/css/style.css
+++ b/Lab 11/css/style.css
@@ -52,9 +52,11 @@ body {
     padding: 7px 15px;
     font-size: 1.25rem;
     border-radius: 5px;
+    width: 100%;
 }
 
 .input-text {
+    width: 100%;
     padding: 7px 15px;
     font-size: 1.25rem;
     border-radius: 5px;
@@ -77,26 +79,33 @@ body {
     font-weight: lighter;
 }
 
-input[type="checkbox"][name="field"] {
+input[type="checkbox"][name="field"], input[type="radio"] {
+    transform: scale(1.5);
     min-height: 1.25rem;
     /*min-width: 1.25rem;*/
     margin-right: 15px;
 }
 
-.check-box-form {
+.check-box-form, .radio-btn-form{
     display: flex;
     align-items: center;
 }
 
+/*.center {*/
+/*    display: flex;*/
+/*    !*align-items: center;*!*/
+/*}*/
+
 .form-group {
     padding: 5px;
+    width: 100%;
 }
 
 #suggestion {
     height: 120px;
 }
 
-#survey-submit {
+#submit {
     max-width: 100%;
     background-color: springgreen;
     color: white;
