--- a/Lab 11/css/style.css
+++ b/Lab 11/css/style.css
@@ -48,11 +48,16 @@ body {
     padding: 2rem 0.7rem;
 }
 
+label {
+    display: block;
+}
+
 .input {
     padding: 7px 15px;
     font-size: 1.25rem;
     border-radius: 5px;
     width: 100%;
+    display: block;
 }
 
 .input-text {
@@ -60,18 +65,11 @@ body {
     padding: 7px 15px;
     font-size: 1.25rem;
     border-radius: 5px;
-    /*border: none;*/
     border: 1px solid #ced4da;
-    /*border: 1px solid rgba(46, 23, 143, 0.46);*/
-    /*border: 1px solid rgba(255,255,255, 0.99);*/
-    /*border: 1px solid red;*/
 }
 
 .input-text:focus {
     outline: none;
-    /*border: 1px solid rgba(46, 23, 143, 0.46);*/
-    /*outline: rgba(46, 23, 143, 0.46);*/
-    /*outline: rgba(255,0,0, 0.99);*/
 }
 
 .clue {
@@ -81,9 +79,8 @@ body {
 
 input[type="checkbox"][name="field"], input[type="radio"] {
     transform: scale(1.5);
-    min-height: 1.25rem;
-    /*min-width: 1.25rem;*/
     margin-right: 15px;
+    margin-left: 5px;
 }
 
 .check-box-form, .radio-btn-form{
@@ -99,6 +96,7 @@ input[type="checkbox"][name="field"], input[type="radio"] {
 .form-group {
     padding: 5px;
     width: 100%;
+    margin-bottom: 5px;
 }
 
 #suggestion {
@@ -106,7 +104,7 @@ input[type="checkbox"][name="field"], input[type="radio"] {
 }
 
 #submit {
-    max-width: 100%;
+    width: 100%;
     background-color: springgreen;
     color: white;
     border-radius: 5px;
