--- a/Lab 11/css/style.css
+++ b/Lab 11/css/style.css
@@ -34,10 +34,10 @@ body {
     display: block;
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(136, 136, 206, 0.7), rgba(136, 136, 206, 0.7)), url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
+    background-image: linear-gradient(rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7)), url("https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg");
     background-size: cover;
-    /*background-repeat: no-repeat;*/
-    /*background-position: center;*/
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 /* Form */
