Lab 12 - cdn js

--- a/Lab 12 - Carousel/css/style.css
+++ b/Lab 12 - Carousel/css/style.css
@@ -16,32 +16,32 @@
     background-image: url(../images/show-case-bg.jpg);
 }
 
-.carousel {
-}
+/*.carousel {*/
+/*}*/
 
-.carousel-item {
-    height: fit-content;
-}
+/*.carousel-item {*/
+/*    height: fit-content;*/
+/*}*/
 
-.carousel-caption {
-}
+/*.carousel-caption {*/
+/*}*/
 
-.carousel-indicators{
+/*.carousel-indicators{*/
 
-}
+/*}*/
 
-.carousel-control-prev {
+/*.carousel-control-prev {*/
 
-}
+/*}*/
 
-.carousel-control-prev-icon {
+/*.carousel-control-prev-icon {*/
 
-}
+/*}*/
 
-.carousel-control-next {
+/*.carousel-control-next {*/
 
-}
+/*}*/
 
-.carousel-control-next-icon {
+/*.carousel-control-next-icon {*/
 
-}
+/*}*/
