Ass 3: add feature

--- a/Assignment 02/css/style.css
+++ b/Assignment 02/css/style.css
@@ -233,7 +233,7 @@ p {
     border: lightgray 1px solid;
 }
 
-.section-content-1 {
+.section-content {
     padding: 10px;
     padding-left: 30px;
     display: grid;
