--- a/Assignment 03/css/laptop.css
+++ b/Assignment 03/css/laptop.css
@@ -16,6 +16,9 @@
         border-top: 1px solid var(--certi-border-color);
     }
 
+    /*#career-info {*/
+    /*    max-height: 1200px;*/
+    /*}*/
 
 
 }
