--- a/Assignment 03/css/tablet.css
+++ b/Assignment 03/css/tablet.css
@@ -14,4 +14,10 @@
     .row.certification .certi-container:nth-child(n+4) {
         border-top: 1px solid var(--certi-border-color);
     }
+    /*#career-info {*/
+    /*    display: flex;*/
+    /*    flex-direction: column;*/
+    /*    flex-wrap: wrap;*/
+    /*    max-height: 2000px;*/
+    /*}*/
 }
