Ass 3: add feature: project charter

--- a/Assignment 03/css/style.css
+++ b/Assignment 03/css/style.css
@@ -374,6 +374,9 @@ a {
     margin-left: 20px;
     padding: 5px 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
+    background-color: #f6ea85;
+    width: auto;
+    max-width: fit-content;
 }
