--- a/Assignment 03/css/mobile.css
+++ b/Assignment 03/css/mobile.css
@@ -15,12 +15,9 @@
         padding: 10px;
     }
 
-    .row.certification .certi-container:nth-child(odd) {
-        border: none;
-    }
 
-    .row.certification .certi-container:nth-child(even) {
-        border: none;
+    .row.certification .certi-container:not(:last-child) {
+        border-bottom: 1px solid var(--certi-border-color);
     }
 
 }
