--- a/Assignment 03/css/tablet.css
+++ b/Assignment 03/css/tablet.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 768px) {
     .avatar {
         display: none;
     }
@@ -11,13 +11,20 @@
         border-left: 1px solid var(--certi-border-color);
     }
 
-    .row.certification .certi-container:nth-child(n+4) {
-        border-top: 1px solid var(--certi-border-color);
-    }
+
+
+    /*.row.certification .certi-container:nth-child(n+4) {*/
+    /*    border-top: 1px solid var(--certi-border-color);*/
+    /*}*/
     /*#career-info {*/
     /*    display: flex;*/
     /*    flex-direction: column;*/
     /*    flex-wrap: wrap;*/
     /*    max-height: 2000px;*/
     /*}*/
+
+    #career-info {
+        grid-template-columns: auto auto;
+    }
+
 }
