--- a/Assignment 03/css/mobile.css
+++ b/Assignment 03/css/mobile.css
@@ -1,5 +1,7 @@
 @media screen and (max-width: 768px) {
-
+    .avatar {
+        display: none;
+    }
     #nav-bar {
         display: flex;
         justify-content: flex-start;
@@ -13,11 +15,6 @@
         width: 100%;
         text-align: left;
         padding: 10px;
-    }
-
-
-    .row.certification .certi-container:not(:last-child) {
-        border-bottom: 1px solid var(--certi-border-color);
     }
 
 }
