--- a/Assignment 03/css/project-style.css
+++ b/Assignment 03/css/project-style.css
@@ -4,9 +4,10 @@ body {
 
 .container {
     background-color: #f8f9fa; /* Màu nền xám cho các ô thông tin */
-    padding: 20px; /* Thêm khoảng cách bên trong cho ô thông tin */
+    padding: .25rem; /* Thêm khoảng cách bên trong cho ô thông tin */
     border-radius: 5px; /* Bo tròn góc cho ô thông tin */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Thêm bóng cho ô thông tin */
+    height: 100%;
 }
 
 h2 {
@@ -37,4 +38,28 @@ h2 {
 
 .font-size-2 {
     font-size: 2rem;
+}
+
+.project-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.project-container .col-12 {
+    padding: .5rem;
+}
+
+.timeLine {
+    grid-area: timeLine;
+}
+
+@media screen and (min-width: 992px) {
+
+    .project-container {
+        display: grid;
+        grid-template-columns: 50% 25% 25%; /* 3 cột */
+        grid-template-rows: auto auto; /* 2 hàng */
+        grid-template-areas: '. . timeLine' '. . timeLine';
+    }
+
 }
